<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/userImageNavHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profiledefault" />

    <TextView
        android:id="@+id/userNameNavHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/user_name"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@+id/userImageNavHeader"
        app:layout_constraintTop_toTopOf="@+id/userImageNavHeader" />

    <TextView
        android:id="@+id/userEmailNavHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/user_email"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/userImageNavHeader"
        app:layout_constraintStart_toEndOf="@+id/userImageNavHeader"
        app:layout_constraintTop_toBottomOf="@+id/userNameNavHeader" />

    <Button
        android:id="@+id/loginBtnNavHeader"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:onClick="loginBtnNavClicked"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImageNavHeader" />

    <ImageButton
        android:id="@+id/addChannelBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/add_channel"
        android:onClick="addChannelClicked"
        android:padding="5dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/addchannelbutton" />

</android.support.constraint.ConstraintLayout>
